fix: increase margin-bottom for main outlet to enhance spacing

--- a/common/common.scss
+++ b/common/common.scss
@@ -289,7 +289,7 @@ html {
 
 html body #main-outlet {
   margin-top: 16px;
-  margin-bottom: 50px;
+  margin-bottom: 70px;
   background: var(--secondary);
   border-radius: 8px;
   padding: 1em 1.5em 5% 1.5em; /*top: 3em; right: 3em; bottom: 5%; left: 3em.*/
